fix: WARNING 발생 제거